[package]
name = "ianaio-file-hash"
description = "This showcasing the IanaIO Workers custom codec and how to send transferrable types to workers."
version = "0.1.1"
authors = ["Jaroslaw Cichon <dev.iana.io> IanaIO Rust and WebAssembly Working Group"]
edition = "2021"
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/ianaio/ianaio-file-hash"
homepage = "https://rustwasm.iana.io/examples/ianaio-file-hash"
documentation = "https://docs.rs/ianaio-file-hash/latest/ianaio-file-hash"
categories = ["wasm", "file-hash", "example", "ianaio"]
publish = true
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We use the ianaio-worker directly to avoid dependency conflicts as Yew also uses ianaio.
ianaio-worker = { version = "0.1.1", path = "../../crates/worker" }
serde = "1.0.163"
web-sys = { version = "0.3.63", features = ["File", "Blob", "ReadableStream"] }
wasm-bindgen-futures = { version = "0.4" }
wasm-streams = "0.3.0"
wasm-bindgen = "0.2.86"
futures = "0.3.28"
sha2 = "0.10.8"
console_error_panic_hook = "0.1.7"
yew = { version = "0.20.0", features = ["csr"] }
serde-wasm-bindgen = "0.6.0"
js-sys = "0.3.63"
hex = "0.4.3"

